# GLFWTemplate

./: .gitignore  CMakeLists.txt  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
